# server-example-python-flask

./: .gitignore  LICENSE  README.md  example.env  pyproject.toml
app/: main.py
app/api/: __init__.py  custom_llm.py  function_call.py  inbound.py  outbound.py  routes.py  webhook.py
app/functions/: get_character_inspiration.py  get_random_name.py  registry.py
app/types/: vapi.py
